--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=usuario
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/usuario_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/database_usuario
 spring.datasource.username=postgres
 spring.datasource.password=1234
 spring.jpa.hibernate.ddl-auto=update
